--- a/vignettes/original/articles/_match_weight_02_application.Rmd
+++ b/vignettes/original/articles/_match_weight_02_application.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "Bayesian dynamic borrowing method"
-# bibliography: references_bayesian.bib
+title: "2. Matching and Weighting Application"
+bibliography: ../references.bib
 author: 
   - Manoj Khanal, PhD
   - Eli Lilly & Company
