--- a/vignettes/references.bib
+++ b/vignettes/references.bib
@@ -39,3 +39,175 @@
   year={2014},
   publisher={Wiley Online Library}
 }
+
+@article{hainmueller2012entropy,
+  title={Entropy balancing for causal effects: A multivariate reweighting method to produce balanced samples in observational studies},
+  author={Hainmueller, Jens},
+  journal={Political analysis},
+  volume={20},
+  number={1},
+  pages={25--46},
+  year={2012},
+  publisher={Cambridge University Press}
+}
+
+
+@article{lazaro2021bayesian,
+  title={Bayesian regularization for flexible baseline hazard functions in Cox survival models},
+  author={L{\'a}zaro, Elena and Armero, Carmen and Alvares, Danilo},
+  journal={Biometrical Journal},
+  volume={63},
+  number={1},
+  pages={7--26},
+  year={2021},
+  publisher={Wiley Online Library}
+}
+
+
+@Manual{psborrow2,
+  title = {psborrow2: An R Package for Bayesian Dynamic Borrowing Simulation Study and Analysis},
+  author = {Isaac Gravestock, Matthew H Secrest},
+  year = {2024},
+  note = {R package version 0.0.2.9001, https://genentech.github.io/psborrow2/},
+  url = {https://github.com/Genentech/psborrow2},
+}
+
+
+@article{ibrahim2015power,
+  title={The power prior: theory and applications},
+  author={Ibrahim, Joseph G and Chen, Ming-Hui and Gwon, Yeongjin and Chen, Fang},
+  journal={Statistics in medicine},
+  volume={34},
+  number={28},
+  pages={3724--3749},
+  year={2015},
+  publisher={Wiley Online Library}
+}
+
+@article{murray2014semiparametric,
+  title={Semiparametric Bayesian commensurate survival model for post-market medical device surveillance with non-exchangeable historical data},
+  author={Murray, Thomas A and Hobbs, Brian P and Lystig, Theodore C and Carlin, Bradley P},
+  journal={Biometrics},
+  volume={70},
+  number={1},
+  pages={185--191},
+  year={2014},
+  publisher={Wiley Online Library}
+}
+
+@article{mccaffrey2013tutorial,
+  title={A tutorial on propensity score estimation for multiple treatments using generalized boosted models},
+  author={McCaffrey, Daniel F and Griffin, Beth Ann and Almirall, Daniel and Slaughter, Mary Ellen and Ramchand, Rajeev and Burgette, Lane F},
+  journal={Statistics in medicine},
+  volume={32},
+  number={19},
+  pages={3388--3414},
+  year={2013},
+  publisher={Wiley Online Library}
+}
+
+@article{cox1972regression,
+  title={Regression models and life-tables},
+  author={Cox, David R},
+  journal={Journal of the Royal Statistical Society: Series B (Methodological)},
+  volume={34},
+  number={2},
+  pages={187--202},
+  year={1972},
+  publisher={Wiley Online Library}
+}
+
+@article{austin2011optimal,
+  title={Optimal caliper widths for propensity-score matching when estimating differences in means and differences in proportions in observational studies},
+  author={Austin, Peter C},
+  journal={Pharmaceutical statistics},
+  volume={10},
+  number={2},
+  pages={150--161},
+  year={2011},
+  publisher={Wiley Online Library}
+}
+
+@article{harris2016brief,
+  title={A brief guide to decisions at each step of the propensity score matching process},
+  author={Harris, Heather and Horst, S Jeanne},
+  journal={Practical Assessment, Research, and Evaluation},
+  volume={21},
+  number={1},
+  pages={4},
+  year={2016}
+}
+
+@article{stuart2011nonparametric,
+  title={nonparametric preprocessing for parametric 368 causal inference},
+  author={Stuart, EA and King, G and Imai, K and Ho, D MatchIt},
+  journal={Journal of statistical software},
+  volume={369},
+  year={2011}
+}
+
+@article{sekhon2008multivariate,
+  title={Multivariate and propensity score matching software with automated balance optimization: the matching package for R},
+  author={Sekhon, Jasjeet S},
+  journal={Journal of Statistical Software, Forthcoming},
+  year={2008}
+}
+
+@article{amusa2019examination,
+  title={Examination of entropy balancing technique for estimating some standard measures of treatment effects: a simulation study},
+  author={Amusa, Lateef and Zewotir, Temesgen and North, Delia},
+  journal={Electronic Journal of Applied Statistical Analysis},
+  volume={12},
+  number={2},
+  pages={491--507},
+  year={2019}
+}
+
+@article{zhang2019balance,
+  title={Balance diagnostics after propensity score matching},
+  author={Zhang, Zhongheng and Kim, Hwa Jung and Lonjon, Guillaume and Zhu, Yibing and others},
+  journal={Annals of translational medicine},
+  volume={7},
+  number={1},
+  year={2019},
+  publisher={AME Publications}
+}
+
+@article{alvares2021bayesian,
+  title={Bayesian survival analysis with BUGS},
+  author={Alvares, Danilo and L{\'a}zaro, Elena and G{\'o}mez-Rubio, Virgilio and Armero, Carmen},
+  journal={Statistics in Medicine},
+  volume={40},
+  number={12},
+  pages={2975--3020},
+  year={2021},
+  publisher={Wiley Online Library}
+}
+
+
+@article{lee2011weight,
+  title={Weight trimming and propensity score weighting},
+  author={Lee, Brian K and Lessler, Justin and Stuart, Elizabeth A},
+  journal={PloS one},
+  volume={6},
+  number={3},
+  pages={e18174},
+  year={2011},
+  publisher={Public Library of Science San Francisco, USA}
+}
+
+@article{greifer2020update,
+  title={An Update on The MatchIt Package in R},
+  author={Greifer, Noah},
+  journal={Last modified December},
+  volume={8},
+  pages={2020},
+  year={2020}
+}
+
+@phdthesis{khanal2022semiparametric,
+  title={Semiparametric Regression Models for Clustered Right-Censored Data Under Clinical Trials and Observational Studies},
+  author={Khanal, Manoj},
+  year={2022},
+  school={The Medical College of Wisconsin}
+}
